Archive2/66/452e98f02e37b2/output
main.cpp: In function 'int main(int, char**)':
main.cpp:121:31: error: invalid operands of types 'model::Vector2D*' and 'float' to binary 'operator*'
         vectorB = ( vectorA * 2.0f );
                               ^
